--- a/Training.ipynb
+++ b/Training.ipynb
@@ -856,8 +856,340 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "6cb5ad1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>year</th>\n",
+       "      <th>transmission</th>\n",
+       "      <th>mileage</th>\n",
+       "      <th>fuelType</th>\n",
+       "      <th>tax</th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>engineSize</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22600</th>\n",
+       "      <td>X2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Automatic</td>\n",
+       "      <td>123</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>145.000000</td>\n",
+       "      <td>38.700000</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1221</th>\n",
+       "      <td>Q2</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Automatic</td>\n",
+       "      <td>13144</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>145.000000</td>\n",
+       "      <td>54.300000</td>\n",
+       "      <td>1.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36847</th>\n",
+       "      <td>Focus</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>48153</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>120.256183</td>\n",
+       "      <td>55.166825</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18427</th>\n",
+       "      <td>Mokka X</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>23428</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>145.000000</td>\n",
+       "      <td>68.900000</td>\n",
+       "      <td>1.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47148</th>\n",
+       "      <td>Focus</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>14151</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>145.000000</td>\n",
+       "      <td>46.300000</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50831</th>\n",
+       "      <td>I10</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>42346</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>104.000000</td>\n",
+       "      <td>60.100000</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35576</th>\n",
+       "      <td>Focus</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>8459</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>120.256183</td>\n",
+       "      <td>55.166825</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71948</th>\n",
+       "      <td>Touareg</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Semi-Auto</td>\n",
+       "      <td>8478</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>145.000000</td>\n",
+       "      <td>34.500000</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61290</th>\n",
+       "      <td>C Class</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Automatic</td>\n",
+       "      <td>41011</td>\n",
+       "      <td>Petrol</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>49.600000</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71050</th>\n",
+       "      <td>Sharan</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>11565</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>145.000000</td>\n",
+       "      <td>43.500000</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15318 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         model  year transmission  mileage fuelType         tax        mpg  \\\n",
+       "22600       X2  2019    Automatic      123   Petrol  145.000000  38.700000   \n",
+       "1221        Q2  2018    Automatic    13144   Petrol  145.000000  54.300000   \n",
+       "36847    Focus  2015       Manual    48153   Diesel  120.256183  55.166825   \n",
+       "18427  Mokka X  2017       Manual    23428   Diesel  145.000000  68.900000   \n",
+       "47148    Focus  2019       Manual    14151   Petrol  145.000000  46.300000   \n",
+       "...        ...   ...          ...      ...      ...         ...        ...   \n",
+       "50831      I10  2014       Manual    42346   Petrol  104.000000  60.100000   \n",
+       "35576    Focus  2018       Manual     8459   Petrol  120.256183  55.166825   \n",
+       "71948  Touareg  2018    Semi-Auto     8478   Diesel  145.000000  34.500000   \n",
+       "61290  C Class  2014    Automatic    41011   Petrol  150.000000  49.600000   \n",
+       "71050   Sharan  2019       Manual    11565   Diesel  145.000000  43.500000   \n",
+       "\n",
+       "       engineSize  \n",
+       "22600         2.0  \n",
+       "1221          1.4  \n",
+       "36847         1.5  \n",
+       "18427         1.6  \n",
+       "47148         1.5  \n",
+       "...           ...  \n",
+       "50831         1.0  \n",
+       "35576         1.5  \n",
+       "71948         3.0  \n",
+       "61290         2.0  \n",
+       "71050         2.0  \n",
+       "\n",
+       "[15318 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "58de4a7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [[\n",
+    "            str(\"honda\"),\n",
+    "            int(2017),\n",
+    "            str(\"manual\"),\n",
+    "            int(1000),\n",
+    "            str(\"bensin\"),\n",
+    "            float(2500000),\n",
+    "            float(10.5),\n",
+    "            float(2.5)\n",
+    "        ]]\n",
+    "dataTest = pd.DataFrame(data, index=[0], columns=[\"model\", \"year\", \"transmission\", \"mileage\", \"fuelType\", \"tax\", \"mpg\", \"engineSize\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e596faf2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>model</th>\n",
+       "      <th>year</th>\n",
+       "      <th>transmission</th>\n",
+       "      <th>mileage</th>\n",
+       "      <th>fuelType</th>\n",
+       "      <th>tax</th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>engineSize</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>honda</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>manual</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>bensin</td>\n",
+       "      <td>2500000.0</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   model  year transmission  mileage fuelType        tax   mpg  engineSize\n",
+       "0  honda  2017       manual     1000   bensin  2500000.0  10.5         2.5"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataTest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c6a858ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "model = pickle.load(open(r\"C:\\Users\\ROG\\Documents\\used_car_regression\\model\\model_regresi_rf.pkl\", 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6f307762",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=8)]: Using backend ThreadingBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=8)]: Done  16 tasks      | elapsed:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done  36 out of  38 | elapsed:    0.0s remaining:    0.0s\n",
+      "[Parallel(n_jobs=8)]: Done  38 out of  38 | elapsed:    0.0s finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "29583.763157894737"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float(model.predict(dataTest)[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bb31c7e",
    "metadata": {},
    "outputs": [],
    "source": []
